# projet-backgammon

./: CMakeLists.txt  INT-Makefile  Makefile  README-INTERFACE  README-INTERFACE.md  README.md  TODO  arbitre.c  arbitre.h  backgammon.c  backgammon.h  ia_lib.c  ia_lib.h  interface.c  interface.h  pile.c  pile.h  testIA.c
interface/: Makefile  backgammon.c  interface.c
strategie/: librairy.c  librairy.h
strategy/: Makefile
strategy/include/: librairy.h
strategy/src/: librairy.c
